--- a/Practice/03_07/index.html
+++ b/Practice/03_07/index.html
@@ -6,5 +6,6 @@
     <title>Practice: Making Objects</title>
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
