practice manipulating attributes 0508

--- a/Practice/05_08/index.html
+++ b/Practice/05_08/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="siteheader">
-      <div class="site-title">BackpackPacker</div>
+      <div class="site-title" style="color:aqua">BackpackPacker</div>
       <div class="site-description">All backpack packing, all the time.</div>
     </header>
     <main class="maincontent">
@@ -35,7 +35,7 @@
         <figure class="backpack__image">
           <img src="../../assets/images/everyday.svg" alt="" loading="lazy" />
         </figure>
-        <h1 class="backpack__name">Everyday Backpack</h1>
+        <h1 class="backpack__name backpackName">Everyday Backpack</h1>
         <ul class="backpack__features">
           <li class="feature backpack__volume">Volume:<span> 30l</span></li>
           <li class="feature backpack__color">Color:<span> grey</span></li>
