create new elements, style them, and append through js 0510

--- a/05_10/index.html
+++ b/05_10/index.html
@@ -14,6 +14,17 @@
       type="text/css"
       media="all"
     />
+    <style>
+      .navStyle {
+        width: 100%;
+        display: flex; 
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        margin: 20px;
+        list-style: none;
+      }
+    </style>
     <script type="module" src="Backpack.js"></script>
     <script type="module" src="script.js"></script>
   </head>
